--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -1,114 +1,130 @@
-.container{
-    margin-left: 10%;
-    margin-right: 10%;
-    width: 80%;
-    height: 90%;
+.container {
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 80%;
+  height: 90%;
 }
 
-.child-container{
-width:20%;
+.child-container {
+  width: 20%;
 }
 
-.Login{
-    height: 80%;
-    /* Center horizontally*/
-    margin: 0 auto;
+.Login {
+  height: 80%;
+  margin: 0 auto;
 }
 
-h1{
-    letter-spacing: 1px;
-    text-align: center;
-    color:white;
+h1 {
+  letter-spacing: 1px;
+  text-align: center;
+  color: white;
 }
 
-input{
-    background: none;
-    border:0;
-    border-bottom: 4px solid white;
-    width:10%;
-    color:white;
-    font-size: 35px;
+input {
+  background: none;
+  border: 0;
+  border-bottom: 4px solid white;
+  width: 10%;
+  color: white;
+  font-size: 35px;
 }
 
-input::placeholder{
-    color:white;
-    opacity: 1;
-        
+input::placeholder {
+  color: white;
+  opacity: 1;
 }
 
-input:focus{
-    outline: 0;
+input:focus {
+  outline: 0;
 }
 input:focus::placeholder {
-    color: transparent;
+  color: transparent;
+}
+
+.login-btn {
+  background: url("../assets/Login_button.webp") no-repeat;
+  cursor: pointer;
+  border: none;
+  width: 421px;
+  height: 93px;
+  position: absolute;
+  bottom: 30%;
+  left: 40%;
+  right: 40%;
+}
+
+.top-pos {
+  font-size: 90px;
+  font-weight: 500;
+}
+
+.bot-pos {
+  text-align: center;
+  font-size: 45px;
+  font-weight: 500;
+}
+
+.right {
+  margin-top: 45px;
+  right: 23%;
+  position: absolute;
+}
+
+.left {
+  margin-top: 45px;
+  left: 23%;
+  position: absolute;
+}
+
+.text-yellow {
+  color: yellow;
+}
+.text-yellow:hover {
+  color: black;
+  cursor: pointer;
+}
+
+.btn-default {
+	background-color:#ffe65a;
+	border-radius:40px;
+	border:1px solid #ffe75e;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Verdana;
+	font-size:30px;
+	padding:30px 59px;
+	text-decoration:none;
+}
+.btn-default:hover {
+	background-color:#ffe75e;
+}
+.btn-default:active {
+	position:relative;
+	top:1px;
+}
+
+@media (min-width: 768px) {
+  .button-46 {
+    font-size: 20px;
+    min-width: 200px;
+    padding: 14px 16px;
   }
-
-input:placeholder-shown{
-    
 }
-
-.login-btn{
-    background:url("../assets/Login_button.webp") no-repeat;
-    cursor:pointer;
-    border:none;
-    width:421px;
-    height:93px;
-    position:absolute;
-    bottom: 30%;
-    left:40%;
-    right: 40%;
-}
-
-.top-pos{
-    margin-top: 5%;
-    font-size: 90px;
-    font-weight: 500;
-}
-
-.bot-pos{
-    text-align: center;
-    font-size: 45px;
-    font-weight: 500;
-}
-
-.right{
-    margin-top: 45px;
-    right:23%;
-    position: absolute;
-}
-
-.left{
-    margin-top: 45px;
-    left:23%;
-    position:absolute;
-}
-
-.text-yellow{
-color:yellow;
-}
-.text-yellow:hover{
-color:black;
-cursor: pointer;
-}
-
 
 /* Mobile */
 @media only screen and (min-width: 640px) {
-    .login-btn{
-        width:421px;
-        height:93px;
-        position:absolute;
-        
-    }
-    .h1{
-        font-size: 20px;
-    }
-
+  .login-btn {
+    width: 421px;
+    height: 93px;
+    position: absolute;
+  }
+  .h1 {
+    font-size: 20px;
+  }
 }
 
 /* Tablet */
 
 @media only screen and (min-width: 1024px) {
-
-
 }
