--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -1,7 +1,6 @@
 h1{
     font-size: 60px;
     font-weight: 600;
-    padding-bottom: 20px;
 }
 
 h2{
@@ -14,7 +13,7 @@ p{
     margin:10px;
 }
 
-.grid{
+.grid-profile{
     display: grid;
     grid-template-columns: 475px 475px 475px;
     grid-template-rows: auto auto auto;
@@ -23,7 +22,7 @@ p{
     justify-content: center;
 }
 
-.item{
+.item-profile{
     background-image: url("../assets/Container.webp");
     width: 420px;
     height: 310px;
