--- a/client/src/pages/Signup.css
+++ b/client/src/pages/Signup.css
@@ -1,17 +1,22 @@
+h1 {
+    letter-spacing: 1px;
+    text-align: center;
+    color: white;
+    margin-bottom: 80px;
+  }
+
 .grid{
     display: grid;
-    grid-template-columns: 475px 475px 475px;
-    grid-template-rows: auto auto auto;
-    grid-gap: 75px;
+    grid-template-columns: 475px 475px;
+    grid-template-rows: auto auto;
+    grid-gap: 90px;
     margin: 0 auto;
     justify-content: center;
 }
 
 .item{
-    background-image: url("../assets/Container.webp");
     width: 420px;
     height: 310px;
-
 }
 
 input {
@@ -44,14 +49,14 @@ input {
 
 .btn-default {
 	background-color:#ffe65a;
-	border-radius:40px;
+	border-radius:50px;
 	border:1px solid #ffe75e;
 	display:inline-block;
 	cursor:pointer;
-	color:#ffffff;
+	color:black;
 	font-family:Verdana;
 	font-size:30px;
-	padding:30px 59px;
+	padding:25px 59px;
 	text-decoration:none;
 }
 .btn-default:hover {
