--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -1,30 +1,55 @@
-h1{
-    font-size: 60px;
-    font-weight: 600;
+h1 {
+  font-size: 60px;
+  font-weight: 600;
 }
 
-h2{
-    text-align: center;
-    font-weight: 600;
-    font-size: 30px;
+h2 {
+  text-align: center;
+  font-weight: 600;
+  font-size: 30px;
 }
 
-p{
-    margin:10px;
+p {
 }
 
-.grid-profile{
-    display: grid;
-    grid-template-columns: 475px 475px 475px;
-    grid-template-rows: auto auto auto;
-    grid-gap: 75px;
-    margin: 0 auto;
-    justify-content: center;
+.weather-icon {
+  margin-right: 50px;
 }
 
-.item-profile{
-    background-image: url("../assets/Container.webp");
-    width: 420px;
-    height: 310px;
+.weather-text {
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
+}
 
+.grid-profile {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto auto;
+  grid-gap: 75px;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.grid-small-profile {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  grid-gap: 0px;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.grid-row-2 {
+  grid-column: 1 / span 2;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.item-profile {
+  background-image: url("../assets/Container.webp");
+  width: 420px;
+  height: 310px;
 }
