--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -22,6 +22,11 @@ p {
   text-align: center;
 }
 
+img{
+    height: 125px;
+    width: 125px;
+}
+
 .grid-profile {
   display: grid;
   grid-template-columns: auto auto auto;
